--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,3 +16,10 @@ primary:
   #   children:
   #   - title: "Archived Posts"
   #     url: "/archive/"
+
+legal:
+  - title: "Privacy"
+    url: "/privacy/"
+
+  - title: "Terms"
+    url: "/terms/"
