--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,9 @@ primary:
   - title: "Blog"
     url: "/blog/"
 
+  - title: "Tutorials"
+    url: "/tutorials/"
+
   - title: "Projects"
     url: "/projects/"
 
