--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,10 @@
 main:
   - title: Home
     url: /
-  - title: Blog
-    url: /blog/
-  - title: Talks
-    url: /talks/
+
   - title: Projects
     url: /projects/
-  - title: Components
+
+  - title: UI Components
     url: /components/
-  - title: Contact
-    url: /contact/
+
