--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
         with:
           ref: exampleSite
 
-      - name: Get Theme
-        run: git submodule update --init --recursive
+      # - name: Get Theme
+        # run: git submodule update --init --recursive
 
-      - name: Update theme to Latest commit
-        run: git submodule update --remote --merge
+      # - name: Update theme to Latest commit
+        # run: git submodule update --remote --merge
 
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
