--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
-* text=auto
-*.go text eol=lf
+* text=auto eol=lf
+*.{cmd,[cC][mM][dD]} text eol=crlf
+*.{bat,[bB][aA][tT]} text eol=crlf
+
+*.go   text eol=lf
 *.svg -text
