--- a/hugo.toml
+++ b/hugo.toml
@@ -53,14 +53,17 @@ fixed = ":title/"
 posts = "posts/:slug"
 
 [params]
-author = "Chase Pierce"
-mode="auto" # color-mode → light,dark,toggle or auto
-useCDN=true # don't use CDNs for fonts and icons, instead serve them locally.
-subtitle = "Gamer, software architect, enjoyer of beverages. Your favorite internet junkie with a love of all things digital and bacon-based."
-mathjax = false # enable MathJax support
-katex = false # enable KaTeX support
-customcss = ["/css/custom.css"]
-mainSections = ['posts']
+  author = "Chase Pierce"
+  subtitle = "Gamer, software architect, enjoyer of beverages. Your favorite internet junkie with a love of all things digital and bacon-based."
+  images = ['/img/open-graph.png']
+  favicon = "/img/favicon.ico"
+
+  mode="auto" # color-mode → light,dark,toggle or auto
+  useCDN=true # don't use CDNs for fonts and icons, instead serve them locally.
+  mathjax = false # enable MathJax support
+  katex = false # enable KaTeX support
+  customcss = ["/css/custom.css"]
+  mainSections = ['posts']
 
 # Social
 [[params.social]]
