include syntaqx in the title

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,8 @@
 baseURL = 'https://syntaqx.com/'
-languageCode = 'en-us'
+
+title = 'Chase Pierce - syntaqx'
 copyright = '© Chase Pierce'
-title = 'Chase Pierce'
+languageCode = 'en-us'
 theme = 'archie'
 
 enableRobotsTXT = true
@@ -61,6 +62,7 @@ posts = "posts/:slug"
 
 [params]
   author = "Chase Pierce"
+  title = "Chase Pierce - syntaqx"
   description = "Gamer, software architect, enjoyer of beverages. Your favorite internet junkie with a love of all things digital and bacon-based."
   subtitle = "Gamer, software architect, enjoyer of beverages. Your favorite internet junkie with a love of all things digital and bacon-based."
   images = ['/img/open-graph.png']
